update forum topic
