# app/Http/Controllers/Api/Dtos/Requests/User/StoreForumTopicRequest.php
@@ -11,22 +11,11 @@ namespace App\Http\Controllers\Api\Dtos\Requests\User;
  * @OA\Schema(
  *      title="StoreForumTopicRequest",
  *      type="object",
- *      required={"category_id", "title", "text"}
+ *      required={"title", "text"}
  * )
  */
 class StoreForumTopicRequest
-{
-    /**
-     * @OA\Property(
-     *      title="category_id",
-     *      description="Forum category id",
-     *      example="1"
-     * )
-     *
-     * @var int
-     */
-    public int $category_id;
-    
+{   
     /**
      * @OA\Property(
      *      title="title",
